--- a/homepage.css
+++ b/homepage.css
@@ -127,12 +127,26 @@ h1 {
     box-shadow: -1px 9px 40px -12px #323232;
 }  
 
-/* scroll button */
 
-.back-to-top {
+
+/* scroll button */
+#btnScrollToTop {
     position: fixed;
-    bottom: 25px;
-    right: 25px;
-    display: none;
-    color: #323232;
-}
+    right: 20px;
+    bottom: 20px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: rgba(224, 224, 224, 0.5);
+    box-shadow: rgba(128, 128, 128, 0.726);
+    color: white;
+    border: none;
+    outline: none;
+    cursor: pointer;
+  }
+  
+  #btnScrollToTop:active {
+    background-color: darkgray;
+    box-shadow: rgba(128, 128, 128, 0.726);
+    color: white;
+  }
